@@ -1402,14 +1402,16 @@ namespace Orthanc
 
   void JobsRegistry::GetStatistics(unsigned int& pending,
                                    unsigned int& running,
-                                   unsigned int& completed)
+                                   unsigned int& success,
+                                   unsigned int& failed)
   {
     boost::mutex::scoped_lock lock(mutex_);
     CheckInvariants();
 
     pending = 0;
     running = 0;
-    completed = 0;
+    success = 0;
+    failed = 0;
     
     for (JobsIndex::const_iterator it = jobsIndex_.begin();
          it != jobsIndex_.end(); ++it)
@@ -1419,18 +1421,21 @@ namespace Orthanc
       switch (job.GetState())
       {
         case JobState_Retry:
-        case JobState_Paused:
         case JobState_Pending:
           pending ++;
           break;
 
+        case JobState_Paused:
         case JobState_Running:
           running ++;
           break;
           
         case JobState_Success:
+          success ++;
+          break;
+
         case JobState_Failure:
-          completed ++;
+          failed ++;
           break;
 
         default:
